# Final-project-PARI

./: CMakeLists.txt  README.md
docs/: Doxyfile.in  mainpage.dox
src/client/: callbacks.c  main.c  myf.c  myf.h  proj.glade  prototypes.h
src/server/: Makefile  auxfuncs.c  myserver.h  prototypes.h  server.c
